<resources>
    <string name="app_name">Enveloper</string>

    <!--activity_login-->
    <string name="LogIn">Log In</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>

    <!--activity_signup-->
    <string name="SignUp">Sign Up</string>
    <string name="Submit">Submit</string>
    <string name="Reset">Reset</string>
    <string name="Email">Email</string>
    <string name="Name">Name</string>

    <!--activity_Choice-->
    <string name="invited">Invited</string>
    <string name="invite">Invite</string>
    <string name="lable">What do you wish to do?</string>


    <!--fragment_layout_one-->
    <string name="fragOneTitle">Welcome</string>
    <string name="fragmentOneContent">You are seeing these pages as this is the first time you have logged into this up. In future you will be logged in automatically.</string>
    <string name="fragTwoContent">All your information will be stored on a MySQL database</string>
    <string name="fragTwoTitle">MySQL</string>

    <!--fragment_layout_three-->
    <string name="fragThreeTitle">Gallery</string>
    <string name="fragThreeContent">watch and upload pictures after the event occurs </string>

    <!--fragment_layout_four-->
    <string name="fragFourTitle">Language Support</string>
    <string name="fragFourContent">This application will also support input of Hebrew and English</string>

    <!--fragment_layout_five-->
    <string name="fragFiveTitle">Web Server</string>
    <string name="fragFiveContent">All of the running of this app will be done while connected to our Web Server</string>

    <!--activity_message-->
    <string name="Message">Write your message here</string>
    <string name="Send">Send</string>

    <string name="Skip">Skip</string>
    <string name="Continue">Continue</string>
    <string name="detailsError">Incorrect Login details - Please try again.</string>
    <string name="errorMissingInfo">Please enter in all your information</string>
    <string name="errorConnection">Sorry there seems to be a problem with Sign up</string>
    <string name="errorWithServer">Sorry there is an issue with the server - Please try again</string>
    <string name="sendSuccess">Message Sent Successfully</string>
    <string name="loginError">There was a problem logging you in</string>

    <!--activity_operation-->
    <string name="title_activity_operation"></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <!-- fragment_main_invite -->
    <string name="hello_blank_fragment">Press on an event and choose an action from navigation bar</string>

    <!-- fragment_fragment_two -->
    <string name="text_fragment">welcome</string>
    <!-- fragment_fragment_three -->
    <string name="upload">upload pictures</string>


    <!-- fragment_fragment_four -->
    <string name="attend">Will Attend</string>
    <string name="notattend">No</string>

    <!-- fragment_my_seat -->
    <string name="message">we are working on it...</string>
    <string name="tableNum">"Table number :</string>
    <string name="howMany">How many?</string>

    <!-- fragment_payment -->
    <string name="messagePayment">Transfer a gift with "bit" app</string>
    <string name="bankAccountDetails">Account number : 186112 branch : 062 \n bank : 031 - "Bank Leumi"</string>

    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password ?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email to sent you password reset instructions.</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="title_activity_invited">InvitedActivity</string>

    <!-- fragment_create_event -->
    <string name="eventName">Event Name</string>
    <string name="editEvent">Edit event</string>
    <string name="create">Save changes</string>
    <string name="time">Event Time</string>
    <string name="invitation">Add invitation</string>
    <string name="date">Event Date</string>
    <string name="browse">Browse</string>
    <string name="bankDetails">Bank Account Details</string>

    <!-- fragment_connect_to_event -->
    <string name="eventCode">Enter the code event</string>
    <string name="connect">Connect</string>

    <!-- fragment_guests -->
    <string name="addGuest">Add Guest</string>
    <string name="title_activity_choice_new">ChoiceActivityNew</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main2">Main2Activity</string>


</resources>
